--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,9 @@ jobs:
         java-version: '16'
         distribution: 'temurin'
     - name: Build with Gradle
-      run: ./gradlew build
+       run:| 
+        chmod +x gradlew
+        ./gradlew build
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.2.0
